--- a/package.json
+++ b/package.json
@@ -38,15 +38,15 @@
   },
   "dependencies": {
     "aesirx-analytics": "^2.4.5",
-    "aesirx-bi-app": "^2.8.2",
+    "aesirx-bi-app": "file:.yalc/aesirx-bi-app",
     "react": "^18.2.0",
     "react-dom": "^18.3.1",
     "react-spinners": "^0.13.8"
   },
   "resolutions": {
-    "aesirx-lib": "^2.1.1",
+    "aesirx-lib": "^2.3.1",
     "aesirx-sso": "^1.4.18",
-    "aesirx-uikit": "^1.3.0",
+    "aesirx-uikit": "^1.3.6",
     "react": "^18",
     "react-dom": "^18",
     "tough-cookie": "^4",
