--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "dependencies": {
     "aesirx-analytics": "^2.4.5",
-    "aesirx-bi-app": "file:.yalc/aesirx-bi-app",
+    "aesirx-bi-app": "^2.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.3.1",
     "react-spinners": "^0.13.8"
@@ -46,7 +46,7 @@
   "resolutions": {
     "aesirx-lib": "^2.3.2",
     "aesirx-sso": "^1.4.18",
-    "aesirx-uikit": "^1.3.6",
+    "aesirx-uikit": "^1.3.8",
     "react": "^18",
     "react-dom": "^18",
     "tough-cookie": "^4",
